--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>These are my GF's graphic design</h1>
     <div class="box">
         <img src="/rica graphic.jpg" alt="" class="img1">
         <img src="/portfolio graphic rica.jpg" alt="" class="img2">
